# MiniML

./: .ocamlformat  LICENSE  README.md  dune-project  miniML.opam
.github/workflows/: ci.yml
docs/: grammar.md
lib/: ast.ml  ast.mli  dune  interpreter.ml  interpreter.mli  lexer.ml  lexer.mli  parser.ml  parser.mli  token.ml  token.mli
test/: dune  test_token.ml
test/interpreter/: integration.t
test/lexer/: unit.ml
test/parser/: property.ml  unit.ml
test/token/: unit.ml
