(lang dune 3.21)

(name miniML)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Maxim Belimov belkamax07@yandex.ru")

(maintainers "Maintainer Nam <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name miniML)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
