(subdir
 token
 (test
  (name unit)
  (libraries miniML alcotest)
  (instrumentation
   (backend bisect_ppx))))

(subdir
 lexer
 (test
  (name unit)
  (libraries miniML alcotest)
  (instrumentation
   (backend bisect_ppx))))

(subdir
 parser
 (tests
  (names unit property)
  (libraries miniML alcotest qcheck)
  (instrumentation
   (backend bisect_ppx))))

(cram
 (deps %{bin:miniML}))
